[package]
name = "pac-windows"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Jet",
    "Win32_Storage_StructuredStorage",
    "Win32_System_IO",
    "Win32_System_Power",
    "Win32_Foundation",
    "Win32_Security",
]
